# claudebar

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
claudebar/: __init__.py  __main__.py  acquire.py  client.py  config.py  enums.py  exceptions.py  icon.py  lock.py  menu.py  state.py  timeparse.py  usage.py  vault.py
tests/: conftest.py  test_icon.py  test_menu.py  test_timeparse.py  test_usage.py
