[tool.poetry]
name = "claudebar"
version = "0.1.0"
description = "Linux system tray app for claude.ai usage limits"
authors = ["Cristian Rubio <cristianrubioa@gmail.com>"]
readme = "README.md"
packages = [{include = "claudebar"}]

[tool.poetry.dependencies]
python = "^3.10"
pystray = ">=0.19.5"
curl-cffi = ">=0.7.0"
Pillow = ">=10.0.0"
keyring = ">=24.0.0"
browser-cookie3 = ">=0.19.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pytest = "^8.3"

[tool.ruff]
target-version = "py310"
line-length = 124

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
